# mosquitto

./: .gitignore  CMakeLists.txt  README.md  cas.conf  vcpkg.json
legacy/: CMakeLists.txt  pkt.c  pkt.h
lib/: CMakeLists.txt  legacy.c  legacy.h  mosquitto_internal.h  packet_mosq.c
src/: CMakeLists.txt
